--- a/views/default/lesson02.html
+++ b/views/default/lesson02.html
@@ -11,19 +11,32 @@
 
 	<div class="lesson">
 		<section>
-		    <span>snippet here</span>
+		    <span>The National Labor Relations Act protects you when acting collectively to address workplace issues. Anytime you join together to improve workplace conditions, you have the law on your side.</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>You have the right to attempt to form a union where none currently exists, or to decertify a union that has lost the support of employees.
+			Examples of employee rights include:
+			Forming, or attempting to form, a union in your workplace;
+			Joining a union whether the union is recognized by your employer or not;
+			Assisting a union in organizing your fellow employees;
+			Refusing to do any or all of these things.
+			To be fairly represented by a union</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>Concerted activities are also protected under the National Labor Relations Act.
+			A few examples of protected concerted activities are:
+			Two or more employees addressing their employer about improving their pay.
+			Two or more employees discussing work-related issues beyond pay, such as safety concerns, with each other.
+			An employee speaking to an employer on behalf of one or more co-workers about improving workplace conditions.
+			</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>
+			You are protected when engaging in concerted activity as a single employee, as well as if you are acting on the authority of other employees, bringing group complaints to the employer’s attention, trying to induce group action, or seeking to prepare for group action.
+			<span>Q: Have you ever organized or coordinated complaints to induce group action?</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section class="question">
