--- a/views/default/lesson03.html
+++ b/views/default/lesson03.html
@@ -11,19 +11,26 @@
 
 	<div class="lesson">
 		<section>
-		    <span>snippet here</span>
+		    <span>"The Federal minimum wage is $7.50 per hour. This rate has not changed since 2009, so some states have increased minimum wages for themselves.
+			<span>Q: Are you being paid your state's minimum wage?"</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>"The Fair Labor Standards Act (FLSA) administered by the Wage and Hour Division requires employers to pay covered employees, who are not otherwise exempt, at least the federal minimum wage (or the state minimum wage, whichever is higher) and overtime pay of one-and-one-half-times the regular rate of pay for hours worked after 40 hours a week.
+			<span>Q: Have you ever worked overtime without receiving overtime pay?"</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>The Fair Labor Standards Act(FLSA) does not require overtime pay for work on Saturdays, Sundays, holidays, or regular days of rest, unless overtime is worked on such days.</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>"There is currently a bill called the Schedules that Work Act that grants an employee the right to request that his or her employer change the terms and conditions of employment relating to:
+			the number of hours or times the employee is required to work or be on call;
+			the location;
+			the amount of notification he or she receives of work schedule assignments; and
+			minimizing fluctuations in the number of hours the employee is scheduled to work on a daily, weekly, or monthly basis.
+			<span>Q: Have you ever experienced hour cuts after requesting schedule accomodations?"</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section class="question">
