--- a/views/default/lesson04.html
+++ b/views/default/lesson04.html
@@ -11,19 +11,39 @@
 
 	<div class="lesson">
 		<section>
-		    <span>snippet here</span>
+		    <span>"You have the right to:
+			Be trained in a language you understand
+			Request an OSHA inspection, and speak to the inspector
+			Report an injury or illness, and get copies of your medical records
+			See copies of the workplace injury and illness log
+			Review records of work-related injuries and illnesses
+			Get copies of test results done to find hazards in the workplace
+			<span>Q: Have you ever been denied any of these rights?"</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>If you have concerns, you have the right to speak up about them without fear of retaliation.
+			</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>You have the right to:
+				Work on machines that are safe
+			Be provided required safety gear, such as gloves or a harness and lifeline for falls
+			Be protected from toxic chemicals
+			<span>Q: Does your employer provide you with the appropriate or proper protective gear and equipment?"</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>You have the right to request an OSHA, Occupational Safety and Health Administration, inspection and speak to the inspector.
+			OSHA prioritizes inspections based on:
+				Imminent dangerous situations
+				Severe illnesses and injuries
+				Worker complaints
+				Referrals of hazards from other federal, state or local agencies, individuals, organizations or the media
+				Targeted inspections—inspections aimed at specific high-hazard industries or individual workplaces that have experienced high rates of injuries and illnesses
+				Follow-up inspections—checks for abatement of violations cited during previous inspections are also conducted by the agency in certain circumstances.
+			<span>Q: Have you ever requested or reported workplace complaints to OSHA?"</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section class="question">
