--- a/views/default/lesson05.html
+++ b/views/default/lesson05.html
@@ -11,19 +11,26 @@
 
 	<div class="lesson">
 		<section>
-		    <span>snippet here</span>
+		    <span>The Family and Medical Leave Act of 1993 entitles eligible employees of covered employers to take unpaid, job-protected leave for specified family and medical reasons with continuation of group health insurance coverage under the same terms and conditions as if the employee had not taken leave.
+			<span>Q: Have you ever felt that was your job security was threatened for needing to take medical leave for yourself or family?</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>According to the Family and Medical Leave Act of 1993,  
+   Eligible employees are entitled to twelve workweeks of leave in a 12-month period for:
+				the birth of a child and to care for the newborn child within one year of birth;
+				the placement with the employee of a child for adoption or foster care and to care for the newly placed child within one year of placement; 
+				to care for the employee’s spouse, child, or parent who has a serious health condition</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>As an eligible employee, you are also entitled to 12 workweeks of leave in a 12 month period for:
+				serious health condition that makes the employee unable to perform the essential functions of his or her job;
+				any qualifying exigency arising out of the fact that the employee’s spouse, son, daughter, or parent is a covered military member on covered active duty</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>Eligible employees are entitled to 26 workweeks of leave during a single 12-month period to care for a covered servicemember with a serious injury or illness if the eligible employee is the servicemember’s spouse, son, daughter, parent, or next of kin  (military caregiver leave)</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section class="question">
