--- a/views/default/lesson06.html
+++ b/views/default/lesson06.html
@@ -11,19 +11,36 @@
 
 	<div class="lesson">
 		<section>
-		    <span>snippet here</span>
+		    <span>The Civil Rights Act of 1964 makes it illegal to retaliate against a person because the person complained about discrimination, filed a charge of discrimination, or participated in an employment discrimination investigation or lawsuit.
+			<span>Q: Have you ever experienced retaliation for speaking out against discrimination?</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>In other words, your employer cannot take an ""adverse action"" against you for trying to prevent discriminatory actions.</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>Some adverse actions are:
+				Firing or laying off
+				Blacklisting
+				Demoting
+				Denying overtime or promotion
+				Disciplining
+				Denial of benefits
+				Failure to hire or rehire
+				Intimidation/harassment
+				Making threats
+				Reassignment affecting prospects for promotion
+				Reducing pay or hours</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section>
-		    <span>snippet here</span>
+		    <span>Since passage of the Occupational Safety and Health, OSH, Act in 1970, Congress has expanded OSHA's whistleblower authority to protect workers from retaliation under 22 federal laws.
+				Some categories you can report are:
+				Safe Drinking Water Act
+				Clean Air Act
+				Affordable Care Act
+				Consumer Product Safety Improvement Act</span>
 		    <div class="button button-active">Next</div>
 		</section>
 		<section class="question">
