--- a/views/default/stories.html
+++ b/views/default/stories.html
@@ -11,12 +11,12 @@
 
 	{{include 'default/top-nav.html'}}
         
-    {{=A('Create Story', _class='btn btn-primary btn-lg outline', _href=URL('default', 'create_stories', args=[request.args(0)], user_signature=True))}}
-
 {{for stories in stories_list:}}
     <div class="mylist">
         <h1>{{=A(stories['Kind'], _href=URL('default', 'post', args=[stories.id]) )}}</h1><br>
     </div>
 {{pass}}
+
+<a href="{{=URL('default', 'create_stories', args=[request.args(0)], user_signature=True)}}"><div class="btn-round"><span>+</span></div></a>
 </body>
 </html>
