--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -11,19 +11,19 @@
 	{{include 'default/top-nav.html'}}
 
 	<div class="lesson animated fadeInLeft" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);"> <!-- ideally, this'd be updated with an ajax call to see what step the user is on; if greater than step one, also change the button below to read "continue lesson" -->
-		<h3><span class="lesson-number">01</span> Labor rights</h3>
-		<span class="lesson-info">This is information about the lesson, click me to get started</span>
+		<h3><span class="lesson-number">01</span> Discrimination</h3>
+		<span class="lesson-info">Learn about your rights when facing discrimination in the workplace, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson01.html')}}"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft" style="background-image:linear-gradient(to right, #eee, #eee 40%, #fff 40%, #fff 85%);">
-		<h3><span class="lesson-number">01</span> Labor rights</h3>
-		<span class="lesson-info">This is information about the lesson, click me to get started</span>
+		<h3><span class="lesson-number">01</span> Workplace issues</h3>
+		<span class="lesson-info">What to know in case of workplace issues, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson02.html')}}"><div><i class="fa fa-chevron-right"></i> Continue lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft">
-		<h3><span class="lesson-number">01</span> Labor rights</h3>
+		<h3><span class="lesson-number">01</span> Wages, hours, and schedules</h3>
 		<span class="lesson-info">This is information about the lesson, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson03.html')}}"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
