--- a/views/default/lesson01.html
+++ b/views/default/lesson01.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-<title>Our Walmart {{=response.title}}</title>
+	<title>Our Walmart - {{=response.title}}</title>
+	<link rel="stylesheet" type="text/css" href="{{=URL('static','css/menu.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{=URL('static','css/animate.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{=URL('static','css/lesson.css')}}">
 </head>
 
 <body>
@@ -13,7 +16,8 @@
 		<section>
 		    <span>There is a law that makes it illegal to discriminate against someone on the basis of race, color, religion, national origin, or sex. This is called the Title VII of the Civil Rights Act of 1964.</span>
 		    <span>Question: Have you ever been denied training, referrals, or employment opportunities due on the basis of your race, color, religion, national origin, or sex?</span>
-			<div class="button button-active">Next</div>
+		    <br><br>
+			<div class="button button-active">Yes</div><div class="button button-active">No</div>
 		</section>
 		<section>
 		    <span>The Civil Rights Act of 1964 also requires that employers reasonably accommodate your sincerely held religious practices, unless doing so would impose an undue hardship on the operation of the employer's business.
@@ -23,7 +27,8 @@
 		<section>
 		    <span>In 1978, there was an amendment to the Civil Rights Act that prohibits discrimination based on pregnancy, childbirth, or related medical conditions. So women affected by pregnancy, childbirth, or related medical conditions shall be treated the same for all employment-related purposes, including receipt of benefits under fringe benefit programs.
 			<span>Question: Are you currently pregnant, or have ever been pregnant while employed at Walmart?</span>
-		    <div class="button button-active">Next</div>
+		    <br><br>
+			<div class="button button-active">Yes</div><div class="button button-active">No</div>
 		</section>
 		<section>
 		    <span>The Age Discrimination in Employment Act of 1967 (ADEA) protects people who are 40 years or older from discimination in the workplace due to age.</span>
@@ -33,7 +38,8 @@
 		    <span>Title I of the Americans with Disabilities Act of 1990 (ADA) makes it illegal to discriminate against a qualified person with a disability in the private sector and in state and local governments.
 			The law also requires that employers reasonably accommodate the known physical or mental limitations of an otherwise qualified individual with a disability who is an applicant or employee, unless doing so would impose an undue hardship on the operation of the employer's business.</span>
 		    <span>Question: Do you require disability accomodations in the workplace?</span>
-			<div class="button button-active">Next</div>
+		    <br><br>
+			<div class="button button-active">Yes</div><div class="button button-active">No</div>
 		</section>
 	</div>
 
