--- a/views/default/lessons.html
+++ b/views/default/lessons.html
@@ -17,32 +17,32 @@
 		<a href="{{=URL('lesson01.html')}}"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft" style="background-image:linear-gradient(to right, #eee, #eee 40%, #fff 40%, #fff 85%);">
-		<h3><span class="lesson-number">01</span> Workplace issues</h3>
+		<h3><span class="lesson-number">02</span> Workplace issues</h3>
 		<span class="lesson-info">What to know in case of workplace issues, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson02.html')}}"><div><i class="fa fa-chevron-right"></i> Continue lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft">
-		<h3><span class="lesson-number">01</span> Wages, hours, and schedules</h3>
-		<span class="lesson-info">This is information about the lesson, click me to get started</span>
+		<h3><span class="lesson-number">03</span> Wages, hours, and schedules</h3>
+		<span class="lesson-info">Information on laws regarding your wages, hours, and schedule, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson03.html')}}"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft">
-		<h3><span class="lesson-number">01</span> Labor rights</h3>
-		<span class="lesson-info">This is information about the lesson, click me to get started</span>
+		<h3><span class="lesson-number">04</span> Safety</h3>
+		<span class="lesson-info">Laws that defend your right to workplace safety, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson04.html')}}"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft">
-		<h3><span class="lesson-number">01</span> Labor rights</h3>
-		<span class="lesson-info">This is information about the lesson, click me to get started</span>
+		<h3><span class="lesson-number">05</span> Health</h3>
+		<span class="lesson-info">What to know about workplace health, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson05.html')}}"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 	</div>
 	<div class="lesson animated fadeInLeft">
-		<h3><span class="lesson-number">01</span> Labor rights</h3>
-		<span class="lesson-info">This is information about the lesson, click me to get started</span>
+		<h3><span class="lesson-number">06</span> Protection</h3>
+		<span class="lesson-info">How you are protected in whistleblower cases, click me to get started</span>
 		<br><br>
 		<a href="{{=URL('lesson06.html')}}"><div><i class="fa fa-chevron-right"></i> Start lesson</div></a>
 	</div>
