--- a/static/css/lesson.scss
+++ b/static/css/lesson.scss
@@ -45,6 +45,15 @@ $google-red: #D50F25;
 	height:100vh;
 	div {
 		text-align: left;
+		a > div.button:first-child {
+			margin-left:10%;
+		}
+		a {
+			white-space: pre;
+		}
+		a:nth-of-type(0):before {
+			content: '\A\A'
+		}
 	}
 }
 .lesson section:first-child {
@@ -53,8 +62,10 @@ $google-red: #D50F25;
 
 ul {
 	padding:1em;
+	padding-left:2em;
 	margin: 1em 0;
+	margin-left:0;
 	background-color: lighten($silver, 7%);
 	border-left: $green;
-	list-style-type: none;
+    list-style-position: outside;
 }
