--- a/static/css/lesson.scss
+++ b/static/css/lesson.scss
@@ -45,15 +45,9 @@ $google-red: #D50F25;
 	height:100vh;
 	div {
 		text-align: left;
-		a > div.button:first-child {
-			margin-left:10%;
-		}
-		a {
-			white-space: pre;
-		}
-		a:nth-of-type(0):before {
-			content: '\A\A'
-		}
+	}
+	.button:nth-of-type(1) {
+		margin-left:10%;
 	}
 }
 .lesson section:first-child {
