--- a/views/default/lesson02.html
+++ b/views/default/lesson02.html
@@ -5,6 +5,7 @@
 	<title>Our Walmart - {{=response.title}}</title>
 	<link rel="stylesheet" type="text/css" href="{{=URL('static','css/animate.css')}}">
 	<link rel="stylesheet" type="text/css" href="{{=URL('static','css/lesson.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{=URL('static','css/lesson.css')}}">
 	{{include 'default/smooth.html'}}
 </head>
 
