--- a/views/default/lesson01.html
+++ b/views/default/lesson01.html
@@ -17,41 +17,76 @@
 		<section class="v-center-container h-center" id="one">
 			<div class="v-center">
 		    <div class="thin-text">There is a law that makes it illegal to discriminate against someone on the basis of race, color, religion, national origin, or sex. This is called the Title VII of the Civil Rights Act of 1964.</div>
-		    <div class="thin-text">Question: Have you ever been denied training, referrals, or employment opportunities due on the basis of your race, color, religion, national origin, or sex?</div>
-		    <br><br><br><br>
-			<div class="button button-active">Yes</div><div class="button button-active">No</div>
+		    <br><br>
+		    <div class="thin-text question">Question: Have you ever been denied training, referrals, or employment opportunities due on the basis of your race, color, religion, national origin, or sex?</div>
+		    <br><br>
+			<center>
+		    	<a data-scroll href="#two"><div class="button button-active">Yes</div><div class="button button-active">No</div></a>
+	    	</center>
 		    </div>
 		</section>
-		<section class="v-center-container h-center" id="one">
+		<section class="v-center-container h-center" id="two">
 			<div class="v-center">
-		    <div class="thin-text">The Civil Rights Act of 1964 also requires that employers reasonably accommodate your sincerely held religious practices, unless doing so would impose an undue hardship on the operation of the employer's business.
-			<div class="thin-text">Question: Have you ever been denied accommodations for your religious practice needs?</div>
-		    <div class="button button-active">Next</div>
+		    <div class="thin-text">The Civil Rights Act of 1964 also requires that employers reasonably accommodate your sincerely held religious practices, unless doing so would impose an undue hardship on the operation of the employer's business.</div>
+		    <br><br>
+			<div class="thin-text question">Question: Have you ever been denied accommodations for your religious practice needs?</div>
+			<br><br>
+		    <center>
+		    	<a data-scroll href="#three"><div class="button button-active">Next</div></a>
+	    	</center>
 		    </div>
 		</section>
-		<section class="v-center-container h-center" id="one">
+		<section class="v-center-container h-center" id="three">
 			<div class="v-center">
-		    <div class="thin-text">In 1978, there was an amendment to the Civil Rights Act that prohibits discrimination based on pregnancy, childbirth, or related medical conditions. So women affected by pregnancy, childbirth, or related medical conditions shall be treated the same for all employment-related purposes, including receipt of benefits under fringe benefit programs.
-			<div class="thin-text">Question: Are you currently pregnant, or have ever been pregnant while employed at Walmart?</div>
-		    <br><br><br><br>
-			<div class="button button-active">Yes</div><div class="button button-active">No</div>
+		    <div class="thin-text">In 1978, there was an amendment to the Civil Rights Act that prohibits discrimination based on pregnancy, childbirth, or related medical conditions. So women affected by pregnancy, childbirth, or related medical conditions shall be treated the same for all employment-related purposes, including receipt of benefits under fringe benefit programs.</div>
+		    <br><br>
+			<div class="thin-text question">Question: Are you currently pregnant, or have ever been pregnant while employed at Walmart?</div>
+		    <br><br>
+			<center>
+		    	<a data-scroll href="#four"><div class="button button-active">Yes</div><div class="button button-active">No</div></a>
+	    	</center>
 		    </div>
 		</section>
-		<section class="v-center-container h-center" id="one">
+		<section class="v-center-container h-center" id="four">
 			<div class="v-center">
 		    <div class="thin-text">The Age Discrimination in Employment Act of 1967 (ADEA) protects people who are 40 years or older from discimination in the workplace due to age.</div>
-		    <div class="button button-active">Next</div>
+		    <br><br>
+		    <center>
+		    	<a data-scroll href="#five"><div class="button button-active">Next</div></a>
+		    </center>
 		    </div>
 		</section>
-		<section class="question">
+		<section class="v-center-container h-center" id="five">
+			<div class="v-center">
 		    <div class="thin-text">Title I of the Americans with Disabilities Act of 1990 (ADA) makes it illegal to discriminate against a qualified person with a disability in the private sector and in state and local governments.
 			The law also requires that employers reasonably accommodate the known physical or mental limitations of an otherwise qualified individual with a disability who is an applicant or employee, unless doing so would impose an undue hardship on the operation of the employer's business.</div>
-		    <div class="thin-text">Question: Do you require disability accomodations in the workplace?</div>
-		    <br><br><br><br>
-			<div class="button button-active">Yes</div><div class="button button-active">No</div>
+		    <br><br>
+		    <div class="thin-text question">Question: Do you require disability accomodations in the workplace?</div>
+		    <br><br>
+			<center>
+		    	<a data-scroll href="#done"><div class="button button-active">Yes</div><div class="button button-active">No</div></a></center>
+		    </div>
+		</section>
+		<section class="v-center-container h-center" id="done">
+			<div class="v-center">
+		    <div class="thin-text"><h2>All done!</h2><br>
+		    You're learning something new every day.
+		    </div>
+		    <br><br>
+			<center>
+		    	<a href="{{=URL('lessons.html')}}"><div class="button button-active">Next lesson</div></a></center>
 		    </div>
 		</section>
 	</div>
 
 </body>
+<script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script type="text/javascript">
+	$(document).ready(function() {
+	    $('.button').click(function() {
+	        $(this).addClass('animated bounce');
+	    });
+	});
+</script>
+
 </html>
