--- a/views/default/lesson02.html
+++ b/views/default/lesson02.html
@@ -48,8 +48,9 @@
 		<section class="v-center-container h-center">
 			<div class="v-center">
 			    <div class="thin-text">
-				You are protected when engaging in concerted activity as a single employee, as well as if you are acting on the authority of other employees, bringing group complaints to the employer’s attention, trying to induce group action, or seeking to prepare for group action.
-				<div class="thin-text">Q: Have you ever organized or coordinated complaints to induce group action?</div>
+				You are protected when engaging in concerted activity as a single employee, as well as if you are acting on the authority of other employees, bringing group complaints to the employer’s attention, trying to induce group action, or seeking to prepare for group action.</div>
+				<br><br>
+				<div class="thin-text question">Question: Have you ever organized or coordinated complaints to induce group action?</div>
 			    <br><br>
 				<div class="button button-active">Yes</div><div class="button button-active">No</div>
 		    </div>
