--- a/views/default/post.html
+++ b/views/default/post.html
@@ -1,19 +1,27 @@
+
+
+<center>
 <h4>{{=stories['Kind']}}'s Posts</h4>
 
-        {{=A('back', _class='btn btn-primary btn-lg outline', _href=URL('default', 'stories'))}}
 
-{{=A('Create Post', _class='btn btn-primary btn-lg outline', _href=URL('default', 'create_post', args=[stories.id], user_signature=True))}}
 
+
+        {{=A('Create Post', _class='btn btn-primary btn-lg outline', _href=URL('default', 'create_post', args=[stories.id], user_signature=True))}}
+
+
+
+<br><br>
 {{for post in post_list:}}
     <div class="mylist">
         <h5><b>{{=post['name']}}</b></h5>
         {{=post['description']}}<br><br>
-        Updated: {{=stories['posting_time'].strftime('%m/%d/%Y')}} at
-                 {{=stories['posting_time'].strftime('%H:%M')}}
+        Updated: {{=board['posting_time'].strftime('%m/%d/%Y')}} at
+                 {{=board['posting_time'].strftime('%H:%M')}}
 
         {{if auth.user_id == post.author:}} <br><br>
-            {{=A(I(_class='fa fa-pencil'), _href=URL('default', 'edit_post', args=[post.stories_id, post.id], user_signature=True))}}
-            {{=A(I(_class='fa fa-trash'), _href=URL('default', 'delete_post', args=[post.stories_id, post.id], user_signature=True))}}
+            {{=A(I(_class='fa fa-pencil'), _href=URL('default', 'edit_post', args=[post.board_id, post.id], user_signature=True))}}
+            {{=A(I(_class='fa fa-trash'), _href=URL('default', 'delete_post', args=[post.board_id, post.id], user_signature=True))}}
         {{pass}}
     </div>
 {{pass}}
+</center>
