--- a/views/default/ourwalmart.html
+++ b/views/default/ourwalmart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Our Walmart - Notifications</title>
+    <title>Our Walmart - Call to Action</title>
     <link rel="stylesheet" type="text/css" href="{{=URL('static','css/menu.css')}}">
     <link rel="stylesheet" type="text/css" href="{{=URL('static','css/animate.css')}}">
 </head>
@@ -11,15 +11,17 @@
     {{include 'default/top-nav.html'}}
 
     <div class="update">
-        <h3><span class="lesson-number">01</span> Labor rights</h3>
-        <span class="lesson-info">This is information about the lesson, click me to get started</span>
+        <h3><span class="lesson-number"></span> 30 January 2016</h3>
+        <span class="lesson-info">Here you’ll see recent updates, notices, and announcements from OUR Walmart. </span>
         <br><br>
         <a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
     </div>
 
     <div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);">
-        <h3><span class="lesson-number">01</span> Labor rights</h3>
-        <span class="lesson-info">This is information about the lesson, click me to get started</span>
+        <h3><span class="lesson-number"></span> 20 January 2016</h3>
+        <span class="lesson-info">HUGE VICTORY. ALL associates will get raises this Feb. 20!
+Last year Walmart announced increasing minimum pay to $9 / hour but it wasn't enough and many long term associates didn't get anything. After pressure from Walmart workers and community supporters, Walmart has announced this February that ALL associates will be getting a raise and any current associate will be raised up to $10 / hour.
+This is a huge step in the right direction. But our fight is not done. We won't stop until ALL associates earn enough to take care of their families.</span>
         <br><br>
         <a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
     </div>
