Fixed question buttons

--- a/views/default/lesson01.html
+++ b/views/default/lesson01.html
@@ -32,7 +32,7 @@
 			<div class="thin-text question">Question: Have you ever been denied accommodations for your religious practice needs?</div>
 			<br><br>
 		    <center>
-		    	<a data-scroll href="#three"><div class="button button-active">Next</div></a>
+		    	<a data-scroll href="#three"><div class="button button-active">Yes</div><div class="button button-active">No</div></a>
 	    	</center>
 		    </div>
 		</section>
