--- a/views/default/ourwalmart.html
+++ b/views/default/ourwalmart.html
@@ -11,19 +11,28 @@
     {{include 'default/top-nav.html'}}
 
     <div class="update">
-        <h3><span class="lesson-number"></span> 30 January 2016</h3>
         <span class="lesson-info">Here you’ll see recent updates, notices, and announcements from OUR Walmart. </span>
-        <br><br>
-        <a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
     </div>
 
-    <div class="lesson" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);">
-        <h3><span class="lesson-number"></span> 20 January 2016</h3>
-        <span class="lesson-info">HUGE VICTORY. ALL associates will get raises this Feb. 20!
-Last year Walmart announced increasing minimum pay to $9 / hour but it wasn't enough and many long term associates didn't get anything. After pressure from Walmart workers and community supporters, Walmart has announced this February that ALL associates will be getting a raise and any current associate will be raised up to $10 / hour.
-This is a huge step in the right direction. But our fight is not done. We won't stop until ALL associates earn enough to take care of their families.</span>
+    <div class="update" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);">
+        <h3>HUGE VICTORY</h3>
+        <span class="lesson-info">ALL associates will get raises this Feb. 20! Last year Walmart announced increasing minimum pay to $9 / hour but it wasn't enough and many long term associates didn't get anything...</span>
         <br><br>
-        <a href="#"><div><i class="fa fa-chevron-right"></i> Review lesson</div></a>
+        <a href="#"><div><i class="fa fa-chevron-right"></i> Read more</div></a>
+    </div>
+
+    <div class="update">
+        <h3>Store closing</h3>
+        <span class="lesson-info">If Walmart treats these workers like they did after the Pico Rivera store closing, what we're really talking about is 10,000 associates losing their jobs," said Julia Sanchez, one of the laid off...</span>
+        <br><br>
+        <a href="#"><div><i class="fa fa-chevron-right"></i> Read more</div></a>
+    </div>
+
+    <div class="update" style="background-image:linear-gradient(to right, #eee, #eee 100%, #fff 100%, #fff 85%);">
+        <h3>Walmart closes 154 US Stores</h3>
+        <span class="lesson-info">Cashiers or door greeters who see someone with a gun are to alert the highest-ranking employee, who is to approach the customer and...</span>
+        <br><br>
+        <a href="#"><div><i class="fa fa-chevron-right"></i> Read more</div></a>
     </div>
 </body>
 <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
